JEAP-6870: Switch tracing from Brave/Zipkin to OTel