@@ -23,7 +23,7 @@ import static org.mockito.Mockito.when;
 @Transactional
 @DataJpaTest
 @ContextConfiguration(classes = OutboxMockKafkaNoSchedulingTestConfig.class)
-class TransactionalOutboxTracingIT {
+class OutboxTraceContextPersistenceIT {
 
     private static final String TOPIC_1 = "test-topic-1";
     private static final StringMessage TEST_MESSAGE_1 = StringMessage.from("test-message-1");
@@ -42,9 +42,6 @@ class TransactionalOutboxTracingIT {
 
     @Autowired
     FailedMessageRepository failedMessageRepository;
-
-    @Autowired
-    TransactionalOutboxConfiguration config;
 
     @Autowired
     TestEntityManager testEntityManager;
@@ -76,7 +73,7 @@ class TransactionalOutboxTracingIT {
 
         final List<DeferredMessage> allMessages = deferredMessageRepository.findAll();
         assertThat(allMessages).hasSize(1);
-        final DeferredMessage sentMessage = allMessages.get(0);
+        final DeferredMessage sentMessage = allMessages.getFirst();
 
         assertThat(sentMessage.getTraceContext()).isNull();
         deleteMessages(allMessages);
@@ -88,6 +85,7 @@ class TransactionalOutboxTracingIT {
                 .spanId(2L)
                 .traceId(1L)
                 .parentSpanId(3L)
+                .sampled(Boolean.TRUE)
                 .build());
         transactionalOutbox = new TransactionalOutbox("testclustername", messageSerializer,
                 deferredMessageRepository, failedMessageRepository, afterCommitMessageSender,
@@ -98,11 +96,35 @@ class TransactionalOutboxTracingIT {
 
         final List<DeferredMessage> allMessages = deferredMessageRepository.findAll();
         assertThat(allMessages).hasSize(1);
-        final DeferredMessage sentMessage = allMessages.get(0);
+        final DeferredMessage sentMessage = allMessages.getFirst();
 
         assertThat(sentMessage.getTraceContext().getTraceId()).isEqualTo(1L);
         assertThat(sentMessage.getTraceContext().getSpanId()).isEqualTo(2L);
         assertThat(sentMessage.getTraceContext().getParentSpanId()).isEqualTo(3L);
+        assertThat(sentMessage.getTraceContext().getSampled()).isTrue();
+        deleteMessages(allMessages);
+    }
+
+    @Test
+    void testSend_whenSampledIsNull_persistsNull() {
+        when(outboxTracing.retrieveCurrentTraceContext()).thenReturn(OutboxTraceContext.builder()
+                .spanId(2L)
+                .traceId(1L)
+                .parentSpanId(3L)
+                .sampled(null)
+                .build());
+        transactionalOutbox = new TransactionalOutbox("testclustername", messageSerializer,
+                deferredMessageRepository, failedMessageRepository, afterCommitMessageSender,
+                contractsValidator, Optional.empty(), outboxTracing, List.of());
+        assertThat(deferredMessageRepository.findAll()).isEmpty();
+
+        transactionalOutbox.sendMessage(TEST_MESSAGE_1, TEST_KEY_1, TOPIC_1);
+
+        final List<DeferredMessage> allMessages = deferredMessageRepository.findAll();
+        assertThat(allMessages).hasSize(1);
+        assertThat(allMessages.getFirst().getTraceContext().getSampled())
+                .as("A null sampled property must be persisted as null.")
+                .isNull();
         deleteMessages(allMessages);
     }
 
